Se creó con Colab

--- a/face_detection.ipynb
+++ b/face_detection.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "face_detection.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -194,8 +193,10 @@
         "id": "pSb3BnYX_atl"
       },
       "source": [
+        "#=>Metodos, lenguajes o librerias para la creacion, entrenamiento y pruebas de una red neuronal artificial.\n",
         "!wget -N https://raw.githubusercontent.com/opencv/opencv/master/samples/dnn/face_detector/deploy.prototxt\n",
-        "!wget -N https://raw.githubusercontent.com/opencv/opencv_3rdparty/dnn_samples_face_detector_20170830/res10_300x300_ssd_iter_140000.caffemodel"
+        "!wget -N https://raw.githubusercontent.com/opencv/opencv_3rdparty/dnn_samples_face_detector_20170830/res10_300x300_ssd_iter_140000.caffemodel\n",
+        "#=>Dataset"
       ],
       "execution_count": null,
       "outputs": []
@@ -240,7 +241,8 @@
       "source": [
         "# resize it to have a maximum width of 400 pixels\n",
         "image = imutils.resize(image, width=400)\n",
-        "blob = cv2.dnn.blobFromImage(cv2.resize(image, (300, 300)), 1.0, (300, 300), (104.0, 177.0, 123.0))"
+        "blob = cv2.dnn.blobFromImage(cv2.resize(image, (300, 300)), 1.0, (300, 300), (104.0, 177.0, 123.0))\n",
+        "#=>preprocesar las imagenes"
       ],
       "execution_count": null,
       "outputs": []
@@ -263,7 +265,8 @@
       "source": [
         "print(\"[INFO] computing object detections...\")\n",
         "net.setInput(blob)\n",
-        "detections = net.forward()"
+        "detections = net.forward()\n",
+        "#=> Preprocesa el dataset de imagenes, lo divide en datos de entrenamiento y prueba."
       ],
       "execution_count": null,
       "outputs": []
@@ -290,6 +293,8 @@
         "\n",
         "\t# filter out weak detections by ensuring the `confidence` is\n",
         "\t# greater than the minimum confidence threshold\n",
+        "\n",
+        "\t#=> Verifica el nivel de reconocimiento\n",
         "\tif confidence > 0.5:\n",
         "\t\t# compute the (x, y)-coordinates of the bounding box for the object\n",
         "\t\tbox = detections[0, 0, i, 3:7] * np.array([w, h, w, h])\n",
